name:           DeploymentTests
version:        0.0.0.1
synopsis:       Tests for automatic software deployment
homepage:       https://github.com/choener/DeploymentTests
license:        BSD3
license-file:   LICENSE
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
copyright:      Christian Hoener zu Siederdissen, 2017
category:       InHouse
build-type:     Simple
cabal-version:  >=1.10
tested-with:    GHC == 8.0.2, GHC == 8.2.1
description:
                Test library for automatic software deployment



extra-source-files:
  data/*.dat
  build/*



library
  exposed-modules:
    Deployment.Tests
  build-depends: base                       >= 4.7    &&  < 5
               , aeson                      >= 0.8
               , bytestring
               , file-embed                 >= 0.0.10
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , QuasiQuotes
                    , TemplateHaskell



executable DeploymentTests
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , cmdargs
                     , bytestring
                     --
                     , DeploymentTests
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , RecordWildCards



test-suite test-DeploymentTests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Golden.hs
  build-depends: base
               --
               , DeploymentTests
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010



source-repository head
  type:     git
  location: https://github.com/choener/DeploymentTests

